--- a/AngularApp1.Server/appsettings.json
+++ b/AngularApp1.Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Flights": "Data Source=localhost,53006;Database=Flights;User id=dino;Password=1234!Secret;TrustServerCertificate=True;"
+  }
 }
